Fix toolbar wrapping

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/toolbar.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/toolbar.css
@@ -33,6 +33,7 @@
 .defaultSkin .mceToolbarRow {
     white-space: normal;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 
